Revert "fix news"
This reverts commit a20e2a30d92bc25312644604a4c041eab4488270.

--- a/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
+++ b/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
@@ -7,8 +7,7 @@
 
 
 .newsSliderItem {
-    display: flex;
-    flex-direction: column;
+
     .newsMainPage {
         @include mut.rem-padded($top: 0px, $right: 0px, $bottom: 0px, $left: 0px);
         @include mut.sized(840px, 567px);
@@ -22,31 +21,33 @@
             height: f.pxToRem(462px);
             margin-right: 20px;
             margin-left: 20px;
-            overflow: hidden;
         }
 
         @media (min-width: 360px) and (max-width: 767px){
             width: f.pxToRem(340px);
-            height: fit-content;
+            height: f.pxToRem(550px);
             margin: 0 f.pxToRem(20px);
         }
     }
 
     .newsSlideText {
         position: absolute;
-        height: fit-content;
         top: 374px;
         z-index: 2;
+        @include mut.sized(840px, 193px);
         @include mut.rounded($bottom-left: 30px, $bottom-right: 30px);
         background-color: c.$pure-white-color;
 
         @media (min-width: 768px) and (max-width: 1024px){
-            top: 320px;
-      }
+            height: 161px;
+            top: 301px;
+            width: 96vw;
+        }
 
         @media (min-width: 360px) and (max-width: 767px) {
             position: relative;
             top: 1px;
+            @include mut.sized(100%, 304px);
         }
     }
 
@@ -54,8 +55,8 @@
         position: relative;
         z-index: 1;
         @include mut.rem-padded($top: 5px, $right: 5px, $bottom: 5px, $left: 5px);
-
-        @media (min-width: 768px) and (max-width: 1024px) {
+       
+        @media (min-width: 768px) and (max-width: 1024px){
             margin-top: 0;
             height: 100%;
         }
@@ -81,18 +82,17 @@
     .newsContainer {
         box-sizing: border-box;
         width: 100%;
-        word-break: break-all;
-        height: 193px;
+        height: 100%;
         @include mut.flexed(column, start, space-between, nowrap);
         @include mut.rem-padded($top: 25px, $right: 30px, $bottom: 25px, $left: 30px);
 
         @media (min-width: 768px) and (max-width: 1024px){
             @include mut.rem-padded($top: 20px, $right: 40px, $bottom: 15px, $left: 20px);
             height: 141px;
+        }
 
         @media (min-width: 360px) and (max-width: 767px) {
             @include mut.rem-padded($top: 15px, $right: 15px, $bottom: 15px, $left: 15px);
-            height: 300px;
         }
     }
 
@@ -100,10 +100,6 @@
         @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 36px);
         color: #1D1F23;
         line-height: f.pxToRem(48px);
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 2;
-        overflow: hidden;
 
         display: -webkit-box;
         -webkit-box-orient: vertical;
@@ -120,19 +116,18 @@
             @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
             font-style: bold;
             line-height: f.pxToRem(26.4px);
-            -webkit-line-clamp: 1;
         }
     }
 
     .newsText {
-
-        position: relative;
-        display: contents;
-        height: fit-content;
+        width: 780px;
+        height: 90px;
         @include mut.rem-margined(5px, 0px, 0px, 0px);
         @include mut.rem-padded(0px, 5px, 0px, 0px);
+       
         color: c.$lighter-black-color;
-        word-break: break-all;
+        
+    
         @include mut.with-font(ft.$roboto-light, $font-weight: 300, $font-size: 15px);
         line-height: 18px;
 
@@ -153,7 +148,13 @@
         }
 
         @media (min-width: 768px) and (max-width: 1024px){
+            top: 301px;
             width: 93vw;
+        }
+
+        @media (min-width: 360px) and (max-width: 767px){
+            height: 100%;
+            width: 100%;
         }
     }
 }
