--- a/src/features/AboutUsPage/TeamMembers/TeamMembersList/TeamMemberList.styles.scss
+++ b/src/features/AboutUsPage/TeamMembers/TeamMembersList/TeamMemberList.styles.scss
@@ -5,6 +5,7 @@
     flex-wrap: wrap;
     gap:20px;
     justify-content: center;
+    margin-top: 100px;
     .teamMemberCardContainer {
         display: flex;
         justify-content: center;
