fix heading size on diff devices

--- a/src/features/MainPage/Heading/Heading.styles.scss
+++ b/src/features/MainPage/Heading/Heading.styles.scss
@@ -30,6 +30,7 @@
         cursor: pointer;
     }
     @media screen and (max-width: 1024px){
+        @include mut.sized($height: 50px, $width: 100%);
         .leftPart {
             .blockName {
                 @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 24px);
