--- a/src/features/StreetcodePage/TimelineBlock/TimelineSwiper/TimelineSwiper.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/TimelineSwiper/TimelineSwiper.styles.scss
@@ -4,6 +4,7 @@
 @use "@sass/_utils.functions.scss" as f;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
+.timeline-swiper{
 .swiper-wrapper, .swiperClass{
     width: 100%;
     margin: 0 auto;
@@ -107,4 +108,5 @@
     background-color: #891F16;
     width: f.pxToRem(28px) !important;
   }
+}
 }
