--- a/src/features/AboutUsPage/TeamMemberCard/TeamMemberCard.styles.scss
+++ b/src/features/AboutUsPage/TeamMemberCard/TeamMemberCard.styles.scss
@@ -8,12 +8,12 @@
 {
     display: flex;
     flex-direction: column;
-    gap: f.pxToRem(30px);
-
+    gap: f.pxToRem(30px);  
     border-radius: 50px;
     box-shadow: 0px 7px 17px 2px #5b5b5b40;
     max-width: f.pxToRem(310px);
     min-width: f.pxToRem(310px);
+    height: 100%;
 
     padding: f.pxToRem(20px);
 
@@ -28,7 +28,6 @@
         display: flex;
         flex-direction: column;
         gap: f.pxToRem(10px);
-
         padding: 0 f.pxToRem(8px);
         text-align: center;
         word-break: break-all;
