--- a/src/features/AboutUsPage/TeamMembers/TeamMembers.component.scss
+++ b/src/features/AboutUsPage/TeamMembers/TeamMembers.component.scss
@@ -11,6 +11,10 @@
     width: 100%;
     overflow: hidden;
 
+    .swiper-wrapper{
+        align-items: center;
+    }
+
     .swiper-slide {
         text-align: center;
         width: fit-content;
