--- a/src/features/StreetcodePage/HeadingBlock/BlockHeading.styles.scss
+++ b/src/features/StreetcodePage/HeadingBlock/BlockHeading.styles.scss
@@ -5,6 +5,7 @@
 .blockHeadingWrapper {
     @include mut.sized(100%, 124px);
     @include mut.flex-centered();
+    margin-top: f.pxToRem(110px);
     margin-bottom: f.pxToRem(26px);
 
     svg {
@@ -40,6 +41,9 @@
 @media (max-width: 1024px) {
     .blockHeadingWrapper{
         margin-left: f.pxToRem(40px);
+        @include mut.sized(100%, 110px);
+        margin-top: f.pxToRem(40px);
+        margin-bottom: f.pxToRem(20px);
     }
     .rhombus{
         height: 110px;
