Fixed interesting facts block

--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
@@ -114,7 +114,7 @@
 
 @media screen and (max-width: 1024px){
     .interestingFactsSliderContainer .slick-list{
-        padding: 4.125rem 0 !important;
+        padding: 63px 0 !important;
     }
 
     .interestingFactsWrapper {
