--- a/src/features/AboutUsPage/TeamMembers/TeamMembers.component.scss
+++ b/src/features/AboutUsPage/TeamMembers/TeamMembers.component.scss
@@ -48,7 +48,7 @@
 .topSliderContainer {
     display: flex;
     align-items: center;
-    justify-content: center; 
+    justify-content: center;
     margin: 0 auto;
 }
 
@@ -56,8 +56,8 @@
     position: relative;
 }
 .teamMembersSlider {
-    margin-top: f.pxToRem(30px);
     .swiper {
+        padding: f.pxToRem(30px) 0;
         .swiper-slide{
             width: fit-content;
             height: auto;
