make handling email message sending response

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,10 @@
   box-sizing: border-box;
 }
 
+.ant-message {
+  position: fixed !important;
+}
+
 body {
   font-family: ft.$body-tag-font;
   @include ut.antialiased();
