--- a/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
+++ b/src/features/StreetcodePage/MapBlock/CheckBox/CheckBox.styles.scss
@@ -16,13 +16,14 @@
   box-shadow: 0px 7px 11px 2px rgba(0, 0, 0, 0.25);
   border-radius: 23px;
   @media screen and (max-width: 1024px) {
-    @include mut.sized(100%,76px);
-    top: 1px;
+    @include mut.sized(100%, auto);
+    top: 0;
     z-index: 3;
     position:relative ;
     box-shadow: none;
     border-radius:0;
-    background: none;
+    background: c.$accented-grayish-gray-color;
+    @include mut.rem-padded($bottom: 14px);
   }
 }
 
