- fix image duplication on mobile - fix text overflowing and different card sizes

--- a/src/assets/sass/mixins/_utils.mixins.scss
+++ b/src/assets/sass/mixins/_utils.mixins.scss
@@ -181,6 +181,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: $text-overflow;
+  word-break: break-word;
 
   @supports (-webkit-line-clamp: $line-num) {
     overflow: hidden;
