--- a/src/features/AboutUsPage/TeamMemberCard/TeamMemberCard.styles.scss
+++ b/src/features/AboutUsPage/TeamMemberCard/TeamMemberCard.styles.scss
@@ -8,43 +8,69 @@
 {
     display: flex;
     flex-direction: column;
-    gap: f.pxToRem(30px);  
+    justify-content: space-between;
+    gap: 5%;
     border-radius: 50px;
     box-shadow: 0px 7px 17px 2px #5b5b5b40;
+
     max-width: f.pxToRem(310px);
     min-width: f.pxToRem(310px);
-    height: 100%;
-
+    height: f.pxToRem(479px);
     padding: f.pxToRem(20px);
 
+    position: relative;
+
+    &_single{
+        margin: f.pxToRem(30px) auto;
+    }
+
     .photoContainer{
+        height: 65%;
+
         img{
             border-radius: 50px;
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
-    
-    .textContainer {
+
+    .content{
+        height: 30%;
         display: flex;
+        justify-content: space-between;
         flex-direction: column;
-        gap: f.pxToRem(10px);
-        padding: 0 f.pxToRem(8px);
-        text-align: center;
-        word-break: break-all;
-        h2 {
-            @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 23px);
+
+        .textContainer {
+            display: flex;
+            flex-direction: column;
+            gap: f.pxToRem(10px);
+            padding: 0 f.pxToRem(8px);
+            text-align: center;
+            word-break: break-all;
+
+            h2 {
+                @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 23px);
+                @include mut.truncated($line-num: 1);
+            }
+
+            p {
+                @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 19px);
+                color: c.$sliders-text-grey-color;
+                @include mut.truncated($line-num: 2);
+            }
         }
-        p {
-            @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 19px);
-            color: c.$sliders-text-grey-color;
-        }
+
         .linksContainer {
             display: flex;
             justify-content: center;
             gap: f.pxToRem(10px);
+            margin-bottom: f.pxToRem(5px);
+
             a {
                 min-width: f.pxToRem(25px);
                 min-height: f.pxToRem(25px);
+
                 img{
                     width: 100%;
                     height: 100%;
@@ -52,5 +78,4 @@
             }
         }
     }
-  
 }
