--- a/src/features/AboutUsPage/Vacancies/Vacancy/Vacancy.syles.scss
+++ b/src/features/AboutUsPage/Vacancies/Vacancy/Vacancy.syles.scss
@@ -11,38 +11,45 @@
     gap: f.pxToRem(15px);
     border-radius: 50px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
     h2 {
         @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
+        @include mut.truncated(1);
     }
+
     h3 {
         @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
         color: c.$lighter-gray-color;
     }
+
     p {
         @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
-        word-break: break-all; 
+        word-break: break-word;
     }
-    
-    label { 
+
+    label {
         @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
-        color: c.$dark-red-color;        
+        color: c.$dark-red-color;
     }
 
     @media screen and (max-width: s.$tablet) {
         padding: f.pxToRem(40px);
         gap: f.pxToRem(10px);
+
         h2 {
             font-size: 24px !important;
         }
+
         h3 {
             font-size: 16px !important;
         }
+
         p {
             font-size: 16px !important;
         }
+
         label {
             font-size: 16px !important;
         }
     }
-    
 }
