--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -69,6 +69,10 @@ $moreInfo-width: 150px;
 }
 
 @media screen and (max-width: 481px) {
+    .OneRowSlide{
+        display: flex;
+        flex-direction: column;
+    }
     .TwoRowSlide{
         display: flex;
         flex-direction: column;
