--- a/src/features/StreetcodePage/PartnersBlock/PartnerItem/PartnerItem.styles.scss
+++ b/src/features/StreetcodePage/PartnersBlock/PartnerItem/PartnerItem.styles.scss
@@ -5,12 +5,13 @@
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
 .partnerItem {
+    width: auto;
     .partnerLogo {
         z-index: 1000;
-        @include mut.sized($height: 100%);
+        height: 100%;
+        width: fit-content;
         filter: opacity(50%) grayscale(100%);
         @include vnd.vendored(transition, 'all .5s ease');
-
         &:hover {
             filter: none;
         }
