add links for vacancies` description add redirecting to gmail

--- a/src/features/AboutUsPage/Vacancies/Vacancy/Vacancy.syles.scss
+++ b/src/features/AboutUsPage/Vacancies/Vacancy/Vacancy.syles.scss
@@ -30,6 +30,7 @@
     label {
         @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
         color: c.$dark-red-color;
+        cursor: pointer;
     }
 
     @media screen and (max-width: s.$tablet) {
