--- a/src/features/StreetcodePage/TextBlock/ReadMore/ReadMore.styles.scss
+++ b/src/features/StreetcodePage/TextBlock/ReadMore/ReadMore.styles.scss
@@ -50,4 +50,24 @@
         justify-content: center;
     }
 
+    .readLess {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 46px;
+        background-color: white;
+        border-radius: 8px;
+        border-color: #A3A3A3;
+        border-style: solid;
+        width: 100%;
+        color: #A3A3A3;
+        // p {
+        //     // width: 60px;
+        //     // height: 16px;
+        //     size: 14px;
+        //     font-family: Roboto;
+        // }
+        // padding: 18px, 26px, 18px, 26px;
+    }
 }
+
