forFansCenterTitle: fix title in for fans block, center text

--- a/src/features/StreetcodePage/SourcesBlock/SourceItem/SourceItem.styles.scss
+++ b/src/features/StreetcodePage/SourcesBlock/SourceItem/SourceItem.styles.scss
@@ -19,5 +19,8 @@ $articlesImg: "@assets/images/sources/Articles.webp";
 @media screen and (max-width: 768px) {
   .sourcesSliderItem {
      @include mut.sizedImportant($width: 250px, $height: 165px);
+     h1 {
+      text-align: center;
+    }
   }
 }
