--- a/src/features/StreetcodePage/PartnersBlock/PartnerItem/PartnerItem.styles.scss
+++ b/src/features/StreetcodePage/PartnersBlock/PartnerItem/PartnerItem.styles.scss
@@ -5,9 +5,14 @@
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
 .partnerItem {
+    text-align: center;
+    position: relative;
     .partnerLogo {
         z-index: 1000;
-        @include mut.sized($height: 100%);
+        height: 100%;
+        width: 80%;
+        object-fit: contain;
+        cursor: pointer;
         filter: opacity(50%) grayscale(100%);
         @include vnd.vendored(transition, 'all .5s ease');
 
