--- a/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
+++ b/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
@@ -154,23 +154,23 @@
         }
     }
     .text{
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 2;
         overflow: hidden;
+        @include mut.truncated(2);
+        word-break: break-word;
+
         @include mut.rem-margined(5px, 0px, 0px, 0px);
         @include mut.rem-padded(0px, 5px, 0px, 0px);
+
         color: c.$lighter-black-color;
-        word-break: break-word;
         @include mut.with-font(ft.$roboto-light, $font-weight: 300, $font-size: 15px);
         line-height: 18px;
+
         @media (min-width: 768px) and (max-width: 1024px) {
-            -webkit-line-clamp: 2;
             width: 93vw;
         }
 
         @media (max-width: 767px) {
-            -webkit-line-clamp: 11;
+            @include mut.truncated(11);
             width: f.pxToRem(320px);
         }
     }
